Updates to the related work section.

--- a/biblio.bib
+++ b/biblio.bib
@@ -3102,3 +3102,14 @@ pages={23-30},
 	pages={777-782},
 	doi={10.1109/CCGRID.2008.79},
 }
+
+@article{FerreiradaSilva-CCPE-2014,
+	title = {Controlling fairness and task granularity in distributed, online, non-clairvoyant workflow executions},
+	journal = {Concurrency and Computation: Practice and Experience},
+	volume = {},
+	number = {},
+	pages = {in press},
+	year = {2014},
+	doi = {10.1002/cpe.3303},
+	author = {Ferreira da Silva, Rafael and Glatard, Tristan and Desprez, Fr\'{e}d\'{e}ric}
+}
